--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="list-of-content">
         <h1>!</h1>
     </div>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!--     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <script src="app.js"></script>
 </body>
 </html> 
